tools/flowc/tests/errors/error8.flow
import string;

// Test on detection of union re-declaration 

Union1 ::= T1, T2;
	T1 : ();
	T2 : ();
	
Union1 ::= T3, T4;
	T3 : ();
	T4 : ();
	
// Re-defintion from the global namespace

Maybe ::= T5, T6;
	T5 : ();
	T6 : ();
	
